--- a/src/Pages/Enroll/Enroll.scss
+++ b/src/Pages/Enroll/Enroll.scss
@@ -9,7 +9,7 @@
 }
 
 #ClassCodeInput {
-    width: 200px;
+    width: 234px;
     padding: 16px;
     border-radius: 6px;
     border: 1px solid #cdcdcd;
@@ -21,22 +21,10 @@
 }
 
 #ClassCodeInput:focus{
+    outline: none;
     border: 1px solid #212121;
 }
 
-button {
+#EnrollBtn {
     width: 234px;
-    padding: 16px;
-    border-radius: 6px;
-    border: none;
-    background-color: #3d8add;
-    color: white;
-    font-size: 16px;
-}
-button:hover{
-    background-color: #205e9f;
-    cursor: pointer;
-}
-button:disabled{
-    background-color: #bdbdbd;
 }
