Create Mypage Interface

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,6 +26,7 @@ button {
   background-color: #3d8add;
   color: white;
   font-size: 16px;
+  font-weight: 500;
 }
 button:hover{
   background-color: #205e9f;
