--- a/src/Components/Gnb/Gnb.scss
+++ b/src/Components/Gnb/Gnb.scss
@@ -16,6 +16,7 @@
   font-size: 20px;
   font-weight: 700;
   color: #3d8add;
+  cursor: pointer;
 }
 
 .ProfileImg {
@@ -23,7 +24,8 @@
   border-radius: 50%;
   width: 32px;
   height: 32px;
-  background-color: #f1f1f1;
+  background-color: #346191;
+  cursor: pointer;
 }
 
 .Menu {
