--- a/src/Components/CreateNewOption/CreateNewOption.scss
+++ b/src/Components/CreateNewOption/CreateNewOption.scss
@@ -33,7 +33,7 @@ input[type=text]:focus {
     margin-right: 8px;
 }
 
-#Ans:checked {
+#AnsAct {
     background-color: rgb(30, 144, 30);
     color: white;
 }
@@ -43,7 +43,7 @@ input[type=text]:focus {
     color: rgb(205, 0, 0);
 }
 
-#Dist:active {
+#DistAct {
     background-color: rgb(220, 51, 51);
     color: white;
 }
