--- a/src/Components/CreateNewOption/CreateNewOption.scss
+++ b/src/Components/CreateNewOption/CreateNewOption.scss
@@ -11,7 +11,8 @@ input[type=text]::placeholder {
 }
 
 input[type=text]:focus {
-    outline-color: #3d8add;
+    outline:none;
+    border-color: #212121;
 }
 
 .Toggles {
@@ -23,7 +24,7 @@ input[type=text]:focus {
     padding: 8px 12px 8px 12px;
     text-align: center;
     border-radius: 20px;
-    border: 2px solid #222;
+    border: 2px solid rgba(0,0,0,0);
     cursor: pointer;
 }
 
@@ -36,6 +37,7 @@ input[type=text]:focus {
 #AnsAct {
     background-color: rgb(30, 144, 30);
     color: white;
+    margin-right: 8px;
 }
 
 #Dist {
